--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <title>Budgie</title>
 </head>
+
+<nav class="navbar bg-white navbar-expand-lg">
+    <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1"><img class="budgie-logo" alt="budgie" src="#"/></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"><i class="fa fa-navicon"></i></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-success nav-btn" href="#" role="button">Try it!</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <body>
 
 
