Added page links and budgie src

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 <nav class="navbar bg-white navbar-expand-lg">
     <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1"><img class="budgie-logo" alt="budgie" src="#"/></span>
+        <span class="navbar-brand mb-0 h1"><img class="budgie-logo" alt="budgie" src="./img/budgie.jpg"/></span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><i class="fa fa-navicon"></i></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-outline-success nav-btn" href="#" role="button">Try it!</a>
+                    <a class="btn btn-outline-success nav-btn" href="budget.html" role="button">Try it!</a>
                 </li>
             </ul>
         </div>
@@ -36,6 +36,7 @@
 
 <body>
 
+    <h1>home</h1>
 
 <!--Bootstrap js-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
