--- a/budget.html
+++ b/budget.html
@@ -17,17 +17,17 @@
 
 <nav class="navbar bg-white navbar-expand-lg">
     <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1"><img class="budgie-logo" alt="budgie" src="#"/></span>
+        <span class="navbar-brand mb-0 h1"><img class="budgie-logo" alt="budgie" src="./img/budgie.jpg"/></span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><i class="fa fa-navicon"></i></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
                 </li>
             </ul>
         </div>
@@ -35,6 +35,8 @@
 </nav>
 
 <body>
+
+    <h1>budget</h1>
     
 
 <!--Bootstrap js-->
