Added welcome and site explaination, btn link.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
 
 <body>
 
-    <h1>home</h1>
+<div class="jumbotron jumbotron-fluid text-center p-5">
+    <div class="container">
+        <h1 mb-3>Welcome to <span class="name-grn">Budgie!</span></h1>      
+        <p>Budgie helps you keep track of your budget and spending</p>
+        <p>Simply enter your total budget amount, then enter each expense to the list to see your total balance and keep track of spending</p>
+        <a class="btn btn-outline-success nav-btn" href="budget.html" role="button">Get started!</a>
+    </div>
+</div>
+
+
 
 <!--Bootstrap js-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
