Added user review section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,39 @@
     </div>
 </div>
 
-
+<container class="container-fluid">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-10 col-xl-8 text-center">
+          <h3 class="mb-4">Don't just take it from us...</h3>
+          <p class="mb-4 pb-2 mb-md-5 pb-md-0">
+            Here's what some of the people who have used our app think.
+          </p>
+        </div>
+      </div>
+    
+      <div class="row text-center">
+        <div class="col-md-6 mb-4 mb-md-0">
+          <div class="d-flex justify-content-center mb-4">
+            <img src="./img/p1.jpg"
+              class="rounded-circle shadow-1-strong" width="100" height="100" />
+          </div>
+          <p class="lead my-3 text-muted">
+            "With what's happening in the world right now, inflation, food shortages, rising fuel costs. There's never been a better time to have a trusty budgeting app like Budgie."
+          </p>
+          <p class="font-italic font-weight-normal mb-4">- Anna Morian</p>
+        </div>
+        <div class="col-md-6 mb-0">
+          <div class="d-flex justify-content-center mb-4">
+            <img src="./img/p2.jpg"
+              class="rounded-circle shadow-1-strong" width="100" height="100" />
+          </div>
+          <p class="lead my-3 text-muted">
+            "I couldn't keep track of money to save my life but since using Budgie I've been able to save for a house. You need to use this app!"
+          </p>
+          <p class="font-italic font-weight-normal mb-4">- Kim Kardashian</p>
+        </div>
+      </div>
+</container>
 
 <!--Bootstrap js-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
