--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 </nav>
 
-<body>
+<body class="d-flex flex-column  min-vh-100">
 
 <div class="jumbotron jumbotron-fluid text-center p-5">
     <div class="container">
