Added 'about' section, img, p, creator info

--- a/about.html
+++ b/about.html
@@ -36,8 +36,27 @@
 
 <body class="d-flex flex-column  min-vh-100">
 
-    <h1>about</h1>
-
+    <div class="jumbotron jumbotron-fluid text-center p-5">
+        <div class="about-section pb-3">
+            <h1 class="mb-5">Creator</h1>
+            <p>I decided to create Budgie in response to a global need for daily budgeting in the face of rising prices.</p>
+            <p>Now, more than ever people are having to account for every penny they spend.</p>
+            <p>I believe Budgie is the perfect budgeting tool for people!</p>
+        </div>
+        <div class="row">
+            <div class="column">
+    
+                <img class="brian-img center pb-5" src="./img/slevin.jpg" alt="Brian Slevin">
+                <div class="container">
+                  <h2>Brian Slevin</h2>
+                  <p class="title">CEO & Founder of Budgie</p>
+                  <p>Fullstack Software Developer.</p>
+                  <p>brian@budgie.com</p>
+                  <p><a class="button">Contact</a></p>
+                </div>
+              </div>
+        </div>
+    </div>
 
 <!--Bootstrap js-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
