Added btn group to link socials

--- a/about.html
+++ b/about.html
@@ -52,7 +52,10 @@
                   <p class="title">CEO & Founder of Budgie</p>
                   <p>Fullstack Software Developer.</p>
                   <p>brian@budgie.com</p>
-                  <p><a class="button">Contact</a></p>
+                  <div>
+                    <button type="button" class="btn btn-large btn-outline-success" href="https://www.linkedin.com/in/brian-s-b99521211/" target="_blank"><i class="fa-brands fa-linkedin"></i></button>
+                    <button type="button" class="btn btn-large btn-outline-success" href="https://github.com/bslevin" target="_blank"><i class="fa-brands fa-github"></i></button>
+                  </div>
                 </div>
               </div>
         </div>
