Added styling to h1 header

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
     <div class="jumbotron jumbotron-fluid text-center p-5">
         <div class="about-section pb-3">
-            <h1 class="mb-5">Creator</h1>
+            <h1 class="mb-5">About <span class="name-grn">Budgie</span></h1>
             <p>I decided to create Budgie in response to a global need for daily budgeting in the face of rising prices.</p>
             <p>Now, more than ever people are having to account for every penny they spend.</p>
             <p>I believe Budgie is the perfect budgeting tool for people!</p>
