reformatted social link buttons

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                   <p>Fullstack Software Developer.</p>
                   <p>brian@budgie.com</p>
                   <div>
-                    <button type="button" class="btn btn-large btn-outline-success" href="https://www.linkedin.com/in/brian-s-b99521211/" target="_blank"><i class="fa-brands fa-linkedin"></i></button>
-                    <button type="button" class="btn btn-large btn-outline-success" href="https://github.com/bslevin" target="_blank"><i class="fa-brands fa-github"></i></button>
+                    <a href="https://www.linkedin.com/in/brian-s-b99521211/" target="_blank" class="m-2 btn btn-outline-success btn-lg" role="button" aria-pressed="true"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/bslevin" target="_blank" class="m-2 btn btn-outline-success btn-lg" role="button" aria-pressed="true"><i class="fa-brands fa-github"></i></a>
                   </div>
                 </div>
               </div>
