--- a/budget.html
+++ b/budget.html
@@ -38,7 +38,25 @@
     <div class="mt-5 container-fluid">
         <div class="row">
             <div class="col-11 mx-auto pt-3">
-                hi
+                <!-- Budget section -->
+                <div class="row">
+                    <div class="col-md-5 my-3">
+                    <!-- budget fail/success feedback -->
+                    <div class="budget-feedback-failed alert alert-danger text-capitalize">budget feedback</div>
+                    <div class="budget-feedback-success alert alert-success text-capitalize">budget feedback</div>
+                    <!-- budget form -->
+                    <form id="budget-input-form" class="budget-input-form">
+                    <h5 class="text-capitalize">enter your budget</h5>
+                    <div class="form-group">
+                        <input type="number" placeholder="e.g. €1000" class="form-control budget-input" id="budget-input">
+                    </div>
+                    <!-- submit button -->
+                    <button type="submit" class="mt-3 btn text-capitalize budget-submit-btn" id="budget-submit-btn">add</button>
+                    </form>
+                    </div>
+                    <!-- Budget info -->
+                </div>
+                <!-- End Budget section --> 
             </div>
         </div>
     </div>
