Add col, row for budget, expenses and balance info

--- a/budget.html
+++ b/budget.html
@@ -55,6 +55,11 @@
                     </form>
                     </div>
                     <!-- Budget info -->
+                    <div class="col-md-7">
+                        <div class="row my-3">
+                            
+                        </div>
+                    </div>
                 </div>
                 <!-- End Budget section --> 
             </div>
