Add budget title, icon, amount

--- a/budget.html
+++ b/budget.html
@@ -57,7 +57,11 @@
                     <!-- Budget info -->
                     <div class="col-md-7">
                         <div class="row my-3">
-                            
+                            <div class="col-4 text-center mb-2">
+                                <h6 class="text-uppercase info-title">budget</h6>
+                                <span class="budget-icon"><i class="fas fa-money-bill-alt"></i></span>
+                                <h4 class="text-uppercase mt-2 budget" id="budget"><span>€ </span><span id="total-budget-amount">0</span></h4>
+                            </div>
                         </div>
                     </div>
                 </div>
