--- a/budget.html
+++ b/budget.html
@@ -67,6 +67,11 @@
                                 <span class="expense-icon"><i class="far fa-credit-card"></i></span>
                                 <h4 class="text-uppercase mt-2 expense" id="expense"><span>€ </span><span id="total-expense-amount">0</span></h4>
                             </div>
+                            <div class="col-4 text-center">
+                                <h6 class="text-uppercase info-title">balance</h6>
+                                <span class="balance-icon"><i class="fas fa-euro-sign"></i></span>
+                                <h4 class="text-uppercase mt-2 balance" id="balance"> <span>€ </span><span id="total-balance-amount">0</span></h4>
+                            </div>
                         </div>
                     </div>
                 </div>
