Added expense feedback alerts

--- a/budget.html
+++ b/budget.html
@@ -75,7 +75,16 @@
                         </div>
                     </div>
                 </div>
-                <!-- End Budget section --> 
+                <!-- End Budget section -->
+                <!-- Expense section --> 
+                <div class="row">
+                    <div class="col-md-5 my-3">
+                        <!-- expense feedback -->
+                        <div class="expense-feedback-failed alert alert-danger text-capitalize">expense feedback</div>
+                        <div class="expense-feedback-success alert alert-success text-capitalize">expense feedback</div>
+                    </div>
+                </div>
+                <!-- End Expense section --> 
             </div>
         </div>
     </div>
