Added expense from control

--- a/budget.html
+++ b/budget.html
@@ -82,6 +82,21 @@
                         <!-- expense feedback -->
                         <div class="expense-feedback-failed alert alert-danger text-capitalize">expense feedback</div>
                         <div class="expense-feedback-success alert alert-success text-capitalize">expense feedback</div>
+                        <!-- expense form -->
+                        <form id="expense-form" class="expense-form">
+                        <h5 class="text-capitalize">enter your expense</h5>
+                        <div class="form-group">
+                        <input type="text" placeholder="e.g. Car Fuel" class="form-control expense-input" id="expense-input">
+                        </div>
+                        <h5 class="mt-2 text-capitalize">enter expense amount</h5>
+                        <div class="form-group">
+                        <input type="number" placeholder="e.g. €100" class="form-control expense-input" id="amount-input">
+                        </div>
+                        <!-- submit button -->
+                        <button type="submit" class="mt-3 btn text-capitalize expense-submit" id="expense-submit">add expense</button>
+                        </form>
+                        </div>
+                        <div class="col-md-7 my-3">
                     </div>
                 </div>
                 <!-- End Expense section --> 
