Added expense list

--- a/budget.html
+++ b/budget.html
@@ -97,6 +97,15 @@
                         </form>
                         </div>
                         <div class="col-md-7 my-3">
+                        <!-- expense list -->
+                        <div class="expense-list" id="expense-list">
+                
+                        <div class="expense-list__info d-flex justify-content-between text-capitalize">
+                        <h5 class="list-item">expense Name</h5>
+                        <h5 class="list-item">expense amount</h5>
+                        <h5 class="list-item">edit/delete</h5>
+                        </div>
+                        </div>
                     </div>
                 </div>
                 <!-- End Expense section --> 
