Added heading for % expense of budget

--- a/budget.html
+++ b/budget.html
@@ -102,9 +102,10 @@
                         <div class="expense-list" id="expense-list">
                 
                         <div class="expense-list__info d-flex justify-content-between text-capitalize">
-                        <h5 class="list-item">expense Name</h5>
-                        <h5 class="list-item">expense amount</h5>
-                        <h5 class="list-item">edit/delete</h5>
+                            <h5 class="list-item">expense Name</h5>
+                            <h5 class="list-item">expense amount</h5>
+                            <h5 class="list-item">edit/delete</h5>
+                            <p class="percentage">% Budget</p>
                         </div>
                         </div>
                     </div>
