Add code use credit to John Smilga - Coding Addict

--- a/budget.html
+++ b/budget.html
@@ -130,3 +130,5 @@
     </div>
 </footer>
 </html>
+
+<!-- Use and Credit for code used in this project goes to Coding Addict [Coding Addict](https://www.youtube.com/codingaddict) - John Smilga -->
