--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./img/budgie.jpg">
+    <link rel="icon" type="image/x-icon" href="./assets/img/budgie.jpg">
     <!-- bootstrap cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--font-awesome cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- main css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <title>Budgie</title>
@@ -18,7 +18,7 @@
 
 <nav class="navbar bg-white navbar-expand-lg">
     <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1"><img class="budgie-logo" alt="budgie" src="./img/budgie.jpg"/></span>
+        <span class="navbar-brand mb-0 h1"><img class="budgie-logo" alt="budgie" src="./assets/img/budgie.jpg"/></span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><i class="fa fa-navicon"></i></span>
         </button>
@@ -59,7 +59,7 @@
       <div class="row text-center">
         <div class="col-md-6 mb-4 mb-md-0">
           <div class="d-flex justify-content-center mb-4">
-            <img src="./img/p1.jpg"
+            <img src="./assets/img/p1.jpg"
               class="rounded-circle shadow-1-strong" width="100" height="100" />
           </div>
           <p class="lead my-3 text-muted">
@@ -69,7 +69,7 @@
         </div>
         <div class="col-md-6 mb-0">
           <div class="d-flex justify-content-center mb-4">
-            <img src="./img/p2.jpg"
+            <img src="./assets/img/p2.jpg"
               class="rounded-circle shadow-1-strong" width="100" height="100" />
           </div>
           <p class="lead my-3 text-muted">
